# axiom-id

./: .firebaserc  .gitignore  Anchor.toml  CLOUDFLARE_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  firebase.json  index.html  netlify.toml  package-lock.json  package.json
.firebase/: hosting..cache
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
.next/cache/: .tsbuildinfo  config.json
.next/cache/eslint/: .cache_112lv31
.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json
.next/server/app/: _not-found.rsc  index.html  (+3 more)
.vercel/: project.json
.vercel/output/: builds.json
app/: DATA_CAPTURE_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  index.html  test_form.html  test_form.js
landing/: README.md  deploy.sh  index.html  package-lock.json  package.json  tsconfig.json  vercel.json
landing/.firebase/: hosting.ZGlzdA.cache
landing/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
programs/agent_soul_factory/: Cargo.toml
programs/axiom_attestations/: Cargo.toml
programs/axiom_id/: Cargo.toml
programs/axiom_id/src/: lib.rs
programs/axiom_staking/: Cargo.toml
programs/axiom_train_earn/: Cargo.toml
sdk/: README.md  package.json
sdk/examples/: package.json
sdk/src/: index.ts
sdk/test/: sdk.test.ts
solana-release/: .crates.toml  .crates2.json  version.yml
src/app/: CTA.tsx  Footer.tsx  Hero.tsx  Solution.tsx  UseCases.tsx  globals.css  page.tsx
tests/: axiom_id.ts
(+53 files in other folders)
